--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,8 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
-# mkdocs documentation
-/site
+# VS code settings
+.vscode
 
 # mypy
 .mypy_cache/
