--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
@@ -24,8 +25,8 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-line-length=120 --statistics
+        flake8 . --count --exit-zero --statistics
 
     - name: Test with pytest
       run: |
-        pytest test -ra -sv
+        pytest -ra -sv test/
