Update codecov coverage step

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,22 +18,21 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        make update
 
-    - name: Lint with flake8
+    - name: Lint code
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --statistics
+        make lint
 
-    - name: Test with pytest
+    - name: Run tests
       run: |
-        pytest -ra -sv test/
+        make test
+
+    - name: Run coverage
+      run: |
+        make coverage
 
     - name: Publish coverage
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.txt
-        name: codecov-umbrella
